# gqe-for-qsci

./: .gitignore  Dockerfile  NOTICE  README.md  dockerfile  pyproject.toml  setup.sh  train.py
configs/: default.yaml
configs/model/: gpt2.yaml
configs/molecule/: n2.yaml  phenylene-1_4-dinitrene.yaml
configs/trainer/: default.yaml
gqe_qsci/: factory.py  molecule.py  train_pipeline.py  wandb_logger.py
gqe_qsci/gqe/: buffer.py  loss.py  operator_pool.py  sampler.py  scheduler.py  utils.py
gqe_qsci/gqe/models/: gpt2.py  policy.py
gqe_qsci/qsci/: determinant.py  pipeline.py  schema.py  statevector.py  subspace.py
gqe_qsci/qsci/refine/: gevp.py  pipeline.py
